--- a/gps/map.css
+++ b/gps/map.css
@@ -1,9 +1,24 @@
 body {
     padding: 0;
     margin: 0;
+    background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(241,241,241,1) 50%, rgba(255,255,255,1) 100%);
 }
 
+.navbar{
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(241,241,241,1) 50%, rgba(255,255,255,1) 100%);
+}
 
+footer{
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(241,241,241,1) 50%, rgba(255,255,255,1) 100%);
+}
 .easyPrintHolder .a3CssClass { 
     background-image: url(data:image/svg+xml;utf8;base64,PD9...go=);
+  }
+
+  .w3-white{
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(241,241,241,1) 50%, rgba(255,255,255,1) 100%);
   }
